fix misaligned audio play icon

--- a/client/style.css
+++ b/client/style.css
@@ -363,7 +363,7 @@ input::-webkit-input-placeholder { color: #999 }
 .playable:not(.playing):hover .icon-play svg { visibility: visible }
 
 .icon-play svg {
-  width: 100%; height: 100%;
+  width: 24px; height: 24px;
   margin-top: .25rem;
   visibility: hidden;
   cursor: pointer;
